Creating training and validation data sets

--- a/Recognize.ipynb
+++ b/Recognize.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1> Handwriting Recognition </h1>\n",
     "\n",
-    "In this notebook, we will use scikit learn library in Python to recognize digits from the images of their handwriting."
+    "In this notebook, we will use the Random Forest Classifier from the  scikit learn library in Python to recognize digits from the images of their handwriting."
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pylab as pl\n",
     "import random\n",
-    "from sklearn import ensemble\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "%matplotlib inline"
    ]
   },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "       [  0.,   0.,   6.,  13.,  10.,   0.,   0.,   0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,6 +127,38 @@
     "    plt.imshow( digit_data, cmap=plt.cm.gray_r )\n",
     "    plt.axis('off')\n",
     "    plt.title( '%i' % digit_label )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Splitting the data into two training and validation sets </b><br>\n",
+    "<ul>\n",
+    "<li> First we zip the labels and data of all elements </li>\n",
+    "<li> We shuffle the zipped list in unison </li>\n",
+    "<li> We then seperate the shuffled data and labels </li>\n",
+    "<li> Using first 80% of the dataset for training and the remaining 20% for validation </li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_and_labels = list( zip( data.images, data.target ) )\n",
+    "random.shuffle( data_and_labels )\n",
+    "\n",
+    "shuffled_data, shuffled_labels = zip( *data_and_labels )\n",
+    "training_set_size = int( 0.8 * len( data ) )\n",
+    "\n",
+    "training_data = shuffled_data[ : training_set_size ]\n",
+    "training_labels = shuffled_labels[ : training_set_size ]\n",
+    "\n",
+    "validation_data = shuffled_data[ training_set_size : ]\n",
+    "validation_labels = shuffled_labels[ training_set_size : ]"
    ]
   },
   {
