--- a/Recognize.ipynb
+++ b/Recognize.ipynb
@@ -144,22 +144,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_and_labels = list( zip( data.images, data.target ) )\n",
     "random.shuffle( data_and_labels )\n",
-    "\n",
+    "import numpy as np\n",
     "shuffled_data, shuffled_labels = zip( *data_and_labels )\n",
-    "training_set_size = int( 0.8 * len( data ) )\n",
+    "training_set_size = int( 0.8 * len( data.images ) )\n",
     "\n",
-    "training_data = shuffled_data[ : training_set_size ]\n",
-    "training_labels = shuffled_labels[ : training_set_size ]\n",
+    "training_data = np.array( shuffled_data[ : training_set_size ] ).reshape( ( training_set_size, 8 * 8 ) )\n",
+    "training_labels = np.array( shuffled_labels[ : training_set_size ] )\n",
     "\n",
-    "validation_data = shuffled_data[ training_set_size : ]\n",
+    "validation_data = shuffled_data[ training_set_size : ].reshape( ( training_set_size, 8 * 8 ) )\n",
     "validation_labels = shuffled_labels[ training_set_size : ]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Training the random forest classifier </b><br>\n",
+    "The default values of parameters for the classifier algorithm such as number of trees, depth, impurity are used while training the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier()\n",
+    "clf.fit( training_data, training_labels )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
