Checking accuracy score of the classifier on the validation set

--- a/Recognize.ipynb
+++ b/Recognize.ipynb
@@ -144,9 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 92032 into shape (360,64)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-105-4b8e826b68d9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mtraining_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mshuffled_labels\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mvalidation_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mshuffled_data\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m(\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mvalidation_data\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mvalidation_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshuffled_labels\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 92032 into shape (360,64)"
+     ]
+    }
+   ],
    "source": [
     "data_and_labels = list( zip( data.images, data.target ) )\n",
     "random.shuffle( data_and_labels )\n",
@@ -157,7 +169,7 @@
     "training_data = np.array( shuffled_data[ : training_set_size ] ).reshape( ( training_set_size, 8 * 8 ) )\n",
     "training_labels = np.array( shuffled_labels[ : training_set_size ] )\n",
     "\n",
-    "validation_data = shuffled_data[ training_set_size : ].reshape( ( training_set_size, 8 * 8 ) )\n",
+    "validation_data = np.array( shuffled_data[ training_set_size : ] ).reshape( ( len( validation_data ), 8 * 8 ) )\n",
     "validation_labels = shuffled_labels[ training_set_size : ]"
    ]
   },
@@ -171,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +198,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +211,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<b> Testing the trained classifier on the Validation Set </b><br>\n",
+    "We are interested in the accuracy of the classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.963888888889\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( clf.score( validation_data, validation_labels ) )"
+   ]
   },
   {
    "cell_type": "code",
