Using classifier to predict label of 25 samples

--- a/Recognize.ipynb
+++ b/Recognize.ipynb
@@ -144,21 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 92032 into shape (360,64)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-105-4b8e826b68d9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mtraining_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mshuffled_labels\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mvalidation_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mshuffled_data\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m(\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mvalidation_data\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mvalidation_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshuffled_labels\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mtraining_set_size\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 92032 into shape (360,64)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_and_labels = list( zip( data.images, data.target ) )\n",
     "random.shuffle( data_and_labels )\n",
@@ -183,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +186,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,19 +206,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.963888888889\n"
+      "0.961111111111\n"
      ]
     }
    ],
    "source": [
     "print( clf.score( validation_data, validation_labels ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAdsAAAHiCAYAAACgD2ZRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3X9spXd15/HPIRMVwjT2sNtmu+li\nTxA/y9YeWKksq9Z3tNBoU+3aUpFIF4g9UrUIGjS2ALGqQPZAVmz/2fGoTcoipbb5oZUAEXvDttut\naK4FqZalUuxWaEMWaWx+FDakGrsJIQHSs39cRxtFwPc485z7vfe575c0KmOdfp/j733u88njuc+x\nubsAAECe59VuAACAtiNsAQBIRtgCAJCMsAUAIBlhCwBAMsIWAIBkhC0AAMlaH7ZmdruZ/aWZPWlm\n67X7GRVm9lIze8LMPlG7l7YzsxeZ2T1m9j0z2zezf1u7pzYzs+7Ruf3Y0Z+v1u6p7czsE2b2bTP7\nOzN7yMx+u3ZPx9X6sJX0N5LukPRHtRsZMXdK+nLtJkbEnZJ+IOkGSW+R9Idm9kt1W2q929395NGf\nl9duZgR8WNKku18v6d9IusPMXlu5p2Npfdi6+2fdfVPS39buZVSY2a2SDiR9vnYvbWdmL5T0m5I+\n4O6PufsXJf1XSW+r2xnQHHf/irs/+fRfj/68pGJLx9b6sEV/mdn1kj4o6d21exkRL5P0lLs/9Iyv\n7UrizjbXh83sETO738w6tZsZBWZ2l5k9LulBSd+W9MeVWzoWwhZN+5Cku939G7UbGREnJR0+62uH\nkn62Qi+j4n2SbpJ0o6SPSrrXzIbqLmsYufs71Tuvf1XSZyU9+dP/PwYLYYvGmNm0pDdIuli7lxHy\nmKTrn/W16yU9WqGXkeDuX3L3R939SXffkHS/pFtq9zUK3P2po38q+UVJ76jdz3GcqN0AWqUjaVLS\n181M6t11XWNmr3L311Tsq80eknTCzF7q7v/n6GtTkr5SsadR45KsdhMj5oT4N9vBYmYnzOz5kq5R\n78L/fDPjPzJyfFS9N8D00Z+PSPpvkm6u2VSbufv31PuR2gfN7IVm9i8kzUr6eN3O2snMxs3s5qev\nI2b2Fkm/JulPa/fWVmb282Z2q5mdNLNrzOxmSb8l6c9r93YcoxA675e0/Iy/v1XSBUkrVbppMXd/\nXNLjT//dzB6T9IS7f7deVyPhneo92vawep+6f4e7c2eb41r1HiV8haSn1Puwzpy786xtHlfvR8Yf\nUe8GcV/SortvVe3qmIxfHg8AQK7W/xgZAIDaCFsAAJIRtgAAJCNsAQBIRtgCAJAs69Gfxj7ifHBw\nUKyZnp4u1nS73dDxJicnQ3UNauJh+L5+pDzymkT3cWdnp7G1ggZqv9fX14s1586dK9bMzMyEjre5\nuVmsGR8fD60V1NSwh+KeR84lSVpdXS3WRM7xSE3UwsJCk3UDdY5H3r/7+/vFmrGxsdDxItf6SGYc\nQ2i/ubMFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIRtgAAJCNsAQBIRtgCAJBs4H+fbeQB+8gD0bu7\nu6HjVRhqMXS2t7cbWyuy39GBJJ1O56p6aVJ0wEJkYEVkEMV9990XOl5kj6K9D5rIPknNDT1o8nxr\n83VnZWWlWHPq1KlizfLycrFGip0HDQ+1COHOFgCAZIQtAADJCFsAAJIRtgAAJCNsAQBIRtgCAJCM\nsAUAIBlhCwBAMsIWAIBkAz9BKmJiYqJYc88994TWmp2dvdp2Wi8yyWVxcTG01sHBQbHm7NmzobUe\neOCBYk2/JsdEpppJ0szMTLEmck5Gz9vI1KP19fXQWgsLC6G6QRPZgyYnSNWYVjRIIudJZMpUdArg\nhQsXQnX9xp0tAADJCFsAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBAMsIWAIBkrRhqEXlofGNj\nI7TW6upqsWZ8fDy01jDa2toq1uzt7RVrogMPtre3izVjY2OhtQZpeEBkwIYU28tIzeTkZOh4c3Nz\njRxvmEWuBd1ut1gTGcQgSZubm8Wa6ICMttrZ2WlsrcgAoxrDi7izBQAgGWELAEAywhYAgGSELQAA\nyQhbAACSEbYAACQjbAEASEbYAgCQrBVDLSIPl0cfmo48gB4d2DBIIsMqJGl+fr5Yc3h4WKw5ffp0\n6HgRy8vLja3VL9HBJ9FhFE2JDP6IDHQYRNH3ZaQu8rqsr6+HjtfWoRYHBwehusiQlMgeRc/LyOCW\n6ECSaF0Ed7YAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIRtgAAJDN3z1g3\nZdGrEZ0EEplS0vCEHWtgjeJ+RycVNTXRKDI1RpL29/eLNZcvXw6tFey9L/sdPUci52WT59vi4mKx\nJnoORNZSM/stDeA1ZVBfY/XpHI9O0IqcJ9FpVE0dL9p7sK/QfnNnCwBAMsIWAIBkhC0AAMkIWwAA\nkhG2AAAkI2wBAEhG2AIAkIywBQAg2YnaDZQsLCwUayIPhI+Pj4eOt7u7W6yJDsiYm5sr1kxPT4fW\nulrRIRNN6XQ6obrIAIWmBm30U/R8297eLtZsbW0Va6KDPzY3N4s1DQ9Y6JvoYITV1dViTeT8jQ5G\nGMbzN+LUqVOhusPDw2JN5By/cuVK6HiRczz6/mwSd7YAACQjbAEASEbYAgCQjLAFACAZYQsAQDLC\nFgCAZIQtAADJCFsAAJIRtgAAJDN3z1i3sUUjk48WFxeLNdHpMjs7O8WayEQUSRobGyvWHBwcWGix\nny7lRfxJIq/J6dOnQ2tFpr3Mzs6G1goaqP2OTDNaWloq1kxNTYWOF5l61PBUsyb2WwrseXRKWuT7\ni7zHo3seOccbnjLVl3M8ek2NTAGMTJCKmpiYKNZEp6QFX5fQfnNnCwBAMsIWAIBkhC0AAMkIWwAA\nkhG2AAAkI2wBAEhG2AIAkIywBQAgWdZQi4FiZrdKWpb0YknfkbTg7l+o21U7mdkrJd0p6bWSvivp\nve5+T92u2o9zvH/M7HZJC5L+qaT/4u4LVRtqOTN77FlfeoGku9z9XTX6ea5O1G4gm5m9UdLvSXqz\npP8l6RfqdtReZnZC0pakj0h6o6QZSfea2Rl3f6hqcy3GOd53fyPpDkk3q3fhRyJ3P/n0/zazF0r6\nv5I+Xa+j56b1d7Zm9heS7nb3u2v30nZm9mpJ/1PSz/rRiWVm/0PSl9z9A1WbazHO8TrM7A5Jv8id\nbf+Y2bx6P8F5iQ9ZeLX632zN7BpJ/0zSz5nZ18zsm2b2B2bGf43m+HEzQk3Sq/vdyKjgHMeImZf0\nsWELWqnlYSvpBknXSnqTpF+VNC3pjKT312yqxR6U9LCk95rZtWb26+r9KPm6um21Guc4RoKZvVi9\n68lG7V6ei7aH7feP/u/vu/u33f0RSf9J0i0Ve2otd/+hpDlJv6Heh3TeLelTkr5Zs6+W4xzHqLhN\n0hfd/XLtRp6LVoetu19R70I/dD9yGFbu/lfuPuPu/8Ddb5Z0k3of2kECznGMkNs0pHe1UsvD9sia\npHeZ2c+b2SlJi5I+V7mn1jKzXzaz55vZdWb2HvU+Gbteua224xzvIzM7YWbPl3SNpGuOzvfWP9lR\nk5m9XtKNGsJPIT9tFML2Q5K+LOkhSf9b0gOS/kPVjtrtbZK+rd6/3f5LSW909yfrttR6nOP99X71\nfnz/7yW99eh/82/kueYlfdbdH63dyHPV+kd/AACobRTubAEAqIqwBQAgGWELAEAywhYAgGSELQAA\nybKeDWvsI857e3vFmk6nU6y5dOlS6Hizs7Ohugb9uHnCx1Xc74ODg9BCc3NzxZrt7e1izfz8fOh4\nq6urxZrx8fHQWkF92e8mRc7vlZWVxtZqWBP7LTW455FzPHLOra+vN9BNioE6x7vdbrEm8pocHh6G\njjc1NRWqi5ieni7WrK+vh/abO1sAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBAMsIWAIBkhC0A\nAMkG/hceR4YeTE5OFmsqDKsYKJF9jHrggQeKNdEhC5G+omsNo8hghMhgl8jD94jb3Nys3UJrRN6/\nkWt49ByPvHbRQTlNXnu4swUAIBlhCwBAMsIWAIBkhC0AAMkIWwAAkhG2AAAkI2wBAEhG2AIAkIyw\nBQAgWbUJUgcHB6G6pibsjLputxuqi7wuOzs7jayD2ISayGsXnYiDmMPDw2LN1tZWaK22Tq+LXne3\nt7eLNWtra8WaTqcTOl7k/RKdDBWZbBXFnS0AAMkIWwAAkhG2AAAkI2wBAEhG2AIAkIywBQAgGWEL\nAEAywhYAgGTm7hnrFheNDEaQYg8yD/kABWtgjb7ud+SB/yZduXIlVBcc7NCX/Y4+8B/Z78hrF319\nIw/pN/kgv5rZbymw51HT09PFmt3d3WJNdFjF5uZmqK5BfTnHo9fdyFCLyF4uLi6Gjhd57zX8moT2\nmztbAACSEbYAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJTtQ6cPQh/MgABbOmnpuX\npqamijXdbje0VnDIQl9EHuSX+j8gJNJX9AH0hYWFq+ymOdGhFvv7+8WayJCJ6Osbed9tbGyE1ooO\ndRg0kfMpUrO0tBQ6XuRcaHiQSF9Er2+XL18u1kSGu0SGY0jSxMREsWZ9fT20VpPXFO5sAQBIRtgC\nAJCMsAUAIBlhCwBAMsIWAIBkhC0AAMkIWwAAkhG2AAAkI2wBAEhWbYJUZGJI1PLycmPHi0zYiU4V\niU4+GmWLi4vFmmGcINXk9LDV1dViTfR739raKtasra2F1hrWCVKRaU1zc3PFmsjrIsUmzg3Sudu0\nyFS6yHV3bGwsdLzINLUm8yeKO1sAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBAMsIWAIBkhC0A\nAMmqDbWIPFguSTMzM8WayAPRkeEJUuwB9DaLPBAe2e+oU6dOFWsiD8UPmsg+StL58+eLNZGhHtH3\nU2QAzIULF0JrDav19fViTeQ6ED0vI8Mv9vb2QmtFhm1Ez71+iQzsiJxzkXNXklZWVkJ1/cadLQAA\nyQhbAACSEbYAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJqk2QiopMX4lMh4pMKpKk\nsbGxYk1kos+wGh8fL9aYWR86+f+ik2OGUWTaTWQCz9mzZ0PHi0ysmp2dDa01rCLTmjY2Nho73u7u\nbiM1Umyy1aBNwYtcLyPX3U6n00A39XBnCwBAMsIWAIBkhC0AAMkIWwAAkhG2AAAkI2wBAEhG2AIA\nkIywBQAgmbl77R5SmVlX0usk/ejoS99y95fX62g0mNlLJf21pM+4+1tr9zMK2PN8ZvbYs770Akl3\nufu7avQzCszsZyTdJekNkl4k6WuSftfd/6RqY8c0Kne2t7v7yaM/BG1/3Cnpy7WbGDHsebJnXEdO\nSrpB0vclfbpyW213QtI3JM1IGpP0AUmfMrPJij0d26iELfrIzG6VdCDp87V7GRXseRVvkvSwpC/U\nbqTN3P177r7i7nvu/vfu/jlJlyW9tnZvxzEqYfthM3vEzO43s07tZtrMzK6X9EFJ767dy6hgz6uZ\nl/Qxb/u/xQ0YM7tB0sskfaV2L8cxCmH7Pkk3SbpR0kcl3WtmL6nbUqt9SNLd7v6N2o2MEPa8z8zs\nxer9WLO531iAIjO7VtInJW24+4O1+zmOgf+tP1fL3b/0jL9umNlvSbpF0u9Xaqm1zGxavQ8xnKnd\ny6hgz6u5TdIX3f1y7UZGhZk9T9LHJf1A0u2V2zm21oftj+GS+vs74kZHR9KkpK8f/Rq+k5KuMbNX\nuftrKvbVZh2x5zXcJuk/1m5iVFjv5L5bvQ+l3eLuP6zc0rG1+tEfMxuX9CuSttV79OfN6v0o+TXu\n/tWavbWRmV0n6fpnfOk96gXBO9z9u1Waajn2vP/M7PWS/kzSP3L3R2v3MwrM7COSpiW9wd2f/fjV\nUGj7ne21ku6Q9ApJT0l6UNIcQZvD3R+X9PjTfz96JvEJLvp52PMq5iV9lqDtDzObkPR2SU9K+s7R\nT3Ak6e3u/slqjR1Tq+9sAQAYBKPwaWQAAKoibAEASEbYAgCQjLAFACAZYQsAQLKsR38a+4jz4uJi\nsWZnZ6epw4UsLCw0WdfEgI2+fqR8fX29WHPu3LnQWhU+DT90+x15D3S73dBa/X6vqLkBMo3teZPn\nb1NmZmZCdcHXeaDO8ZWVlWJN5PtaWloKHW92djZU16DQfnNnCwBAMsIWAIBkhC0AAMkIWwAAkhG2\nAAAkI2wBAEhG2AIAkIywBQAgWdav2CsuenBwEFpoenq6WBN5aHpycjJ0vIjoWsG6gXoAPaLT6RRr\noq/vkA5ZaGy/9/b2ijWnT58u1iwvL4eOF3mvrK6uhtaKDG0ZHx8fuKEWkWtKpCZ6Hbhw4UKxZnNz\nM7RWcGBDX87x6Hv3zJkzxZrI+Rsd3BLZy/Hx8dBaQQy1AABgEBC2AAAkI2wBAEhG2AIAkIywBQAg\nGWELAEAywhYAgGSELQAAyQhbAACSVZsgFZ0GMjc3V6xpaiKMFJuwU2P6SEFjL+LW1laxZn5+vlgT\nfX0jU2gWFxdDawWnVg3UfkemMEX2qMnpOufOnWtsrdnZ2b5NkIpOLYtMfopM9opcK6RmX7+ggTrH\nm9rvyOQ6KTYBLZoHQUyQAgBgEBC2AAAkI2wBAEhG2AIAkIywBQAgGWELAEAywhYAgGSELQAAyU7U\nbqAJkYedIw+WS7EhA5GH+QdN9IH/8+fPF2si+x19aDyy35GH4gfN+vp6qG5jY6NYMzs7W6yJPMgv\nxfoaGxsLrRXpq5+iw2Yi79/IWtFBFJFzvM2G8XqZgTtbAACSEbYAACQjbAEASEbYAgCQjLAFACAZ\nYQsAQDLCFgCAZIQtAADJzN0z1m1s0cgwhujD7BGRAQrRgQWR4Q+SLLTYT1fc7+iD9ZEhC1NTU8Wa\n6Guyvb1drIk+FB8cstCX/Y4O9djd3b3qZpoWGWwihQdpNLHfUoPXlMh7IfI+aNIA7nlKMPwkkaFD\nc3NzobX29vausptjC+03d7YAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIR\ntgAAJDtRu4GSJqdDRUSmPnW73cbW6pfIJC5JmpmZaeR4kclQkjQxMVGsiUysGjTRqVcRkalm0ek6\nW1tbxZqVlZXQWsMqMt0r8h6PvC5S7DoQff3aan9/v1gT3e9BxZ0tAADJCFsAAJIRtgAAJCNsAQBI\nRtgCAJCMsAUAIBlhCwBAMsIWAIBkAz/UYmFhoVizurparIkOxxj2B6d/kiaHLOzs7BRrzpw5E1or\n8jD/ML4mTfYcGbAQGVYhSRcvXizW9HuQTL9FhkxEBnssLS2Fjjc7Oxuqa6vIuRm5DqytrYWOFx06\nFNHkYCLubAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIRtgAAJCNsAQBINvATpCLT\nbE6dOtXY8cbGxoo1TU5jGkZNfv+RCWGjLrLfkfNWik3qabumzt9RnwwVdf78+UbWOXfuXCPrSNLE\nxESobm9vr7FjcmcLAEAywhYAgGSELQAAyQhbAACSEbYAACQjbAEASEbYAgCQjLAFACCZuXvtHlKZ\n2aSkuyT9c0lPSvqMpEV3/1HFtlrJzH5Gvb1+g6QXSfqapN919z+p2liLsef9Z2ZdSa+T9PQ15Fvu\n/vJ6HbWbmT32rC+9QNJd7v6uGv08V6NwZ3uXpIcl/YKkaUkzkt5ZtaP2OiHpG+rt8ZikD0j61NF/\n8CAHe17H7e5+8ugPQZvoGft8UtINkr4v6dOV2zq2UQjb05I+5e5PuPt3JP13Sb9UuadWcvfvufuK\nu++5+9+7++ckXZb02tq9tRV7jhHzJvVunr5Qu5HjGoWwvSTpVjO7zsxulPSv1AtcJDOzGyS9TNJX\navcyKtjzvvmwmT1iZvebWad2MyNkXtLHfAj//XMUwnZbvTvZv5P0TUl/KWm0f5NAH5jZtZI+KWnD\n3R+s3c8oYM/75n2SbpJ0o6SPSrrXzF5St6X2M7MXq/fPJRu1e3kuWh22ZvY8SX8q6bOSXijpH0o6\nJen3avbVdkf7/nFJP5B0e+V2RgJ73j/u/iV3f9Tdn3T3DUn3S7qldl8j4DZJX3T3y7UbeS5aHbbq\nfTrzn0j6g6M3xt9KWhNvjDRmZpLuVu+DDL/p7j+s3FLrsefVuSSr3cQIuE1DelcrtTxs3f0R9T4s\n8g4zO2Fm4+r9zH+3bmet9oeSXinpX7v792s3MyLY8z4xs3Ezu9nMnn90TXmLpF9T7ydoSGJmr1fv\nx/ZD9ynkp43Cc7bTklYlTUl6StJ9kn7H3R+u2lgLmdmEpD31nmd+5nPMb3f3T1ZpquXY8/4ys5+T\n9MeSXqHe9eRBSR9w9z+r2ljLmdl/lnSdu7+tdi/PVevDFgCA2lr9Y2QAAAYBYQsAQDLCFgCAZIQt\nAADJCFsAAJKdSFq3sY84LywsFGs2NsrPOS8vL4eOt7KyEqprUBMPwze234uLi8WaS5cuFWsuXrzY\n2PEa1pf93tnZCS3U6XSKNYeHh8Walp/fUoPn+OrqarFmc7M80fXg4KCx40XOg2MYqGtKt9st1pw9\ne7ZYEz3HI++96H4Hr0+h/ebOFgCAZIQtAADJCFsAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBA\nsqyhFkWRB72l2APK9913X7EmMhxDksbHx4s1FQYx9E3kYf6pqalizdLSUuh4c3NzxZrJycnQWoNk\nfX09VBcZWDE7O1usib6fIu+DYdzv44icm2tra40dr+37WRJ9L5REz/HIeypy3Wkad7YAACQjbAEA\nSEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIRtgAAJKs2QapJkQkt0alPBwcHV9nNcIvs\n097eXiM1Umy6zMrKSmitQRL9/ufn54s1kalPW1tboeO1WbfbDdVFJqBFrgOjfq2ITPeTpI2NjWJN\nZApg9D0VuYZFJwo2iTtbAACSEbYAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJqg21\niA6ZiDh9+nRja21ubja21jCKvC6Rh/mjAwbaOhhgdXU1VNfkgJCI8fHxxtYaNNEhC7u7u42tFdHp\ndBo73jC+fsvLy8WayB5NT0+HjtdktjSJO1sAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBAMsIW\nAIBkhC0AAMmqDbWIDjOIDJmYmpoq1kQHA1y5ciVUN8oiD9ZHX9/Jycmr7GYwRb+vSN3CwkKxJvIe\nkIZzKELU3NxcY3VNnpeR1y86TCeyVr9Eh0xEBnaY2dW2cyzR17fJ/ebOFgCAZIQtAADJCFsAAJIR\ntgAAJCNsAQBIRtgCAJCMsAUAIBlhCwBAMsIWAIBk1SZIRSc6bW9vF2suX77c2PEWFxdDdRGDNO2l\nSd1ut1izv78fWuv06dNX2c1wi5yXkf1u82SoqEGdRhbpK3p9GkaRSVMTExPFmug53ul0ijXR6VdN\n4s4WAIBkhC0AAMkIWwAAkhG2AAAkI2wBAEhG2AIAkIywBQAgGWELAECyakMtDg4OGlsr8kB49CHm\nyAPo6+vrobWGcajF6upqsWZpaamx4z3wwAPFmitXroTWGqT93tnZCdWdOXOmkeNFh4iYWbFmamoq\ntNawDtuYm5sr1kTe49HvLXJ9GtSBHE1oaoBEdODQIF0Hnok7WwAAkhG2AAAkI2wBAEhG2AIAkIyw\nBQAgGWELAEAywhYAgGSELQAAyQhbAACSVZsg1el0QnUXL14s1kQmwhweHoaONzExUayJTM4ZVpFp\nN2NjY8Wa6NSYCxcuhOoiIlObIhOyBs3MzEyxJvp+GtapT02KnJv9nugUnTg2jCLnXGSiYPQcH1Tc\n2QIAkIywBQAgGWELAEAywhYAgGSELQAAyQhbAACSEbYAACQjbAEASGbuXruHVGb2Skl3SnqtpO9K\neq+731O3q3Yzs66k10n60dGXvuXuL6/X0Wgws5dK+mtJn3H3t9bup+3Y7/5oyzW81Xe2ZnZC0pak\nz0l6kaR/J+kTZvayqo2Nhtvd/eTRH4K2P+6U9OXaTYwQ9jtZm67hrQ5bSa+Q9I8lXXT3p9z9zyXd\nL+ltddsCmmVmt0o6kPT52r2MAva7b1pzDW972NpP+Nqr+93ICPqwmT1iZvebWad2M21mZtdL+qCk\nd9fuZRSw333Vmmt428P2QUkPS3qvmV1rZr8uaUbSdXXbar33SbpJ0o2SPirpXjN7Sd2WWu1Dku52\n92/UbmREsN/905preKvD1t1/KGlO0m9I+o56/yX6KUnfrNlX27n7l9z9UXd/0t031Puxzy21+2oj\nM5uW9AZJ5V+PhavGfvdXm67h1X7FXr+4+1+p919CkiQz+wtJG/U6GkmuH//jIFy9jqRJSV83M0k6\nKekaM3uVu7+mYl9t1RH73VdtuYaPwqM/vyzpIfXu4t8p6XckvcLdn6zaWEuZ2bikX5G0rd6jP29W\n70fJr3H3r9bsrY3M7DpJ1z/jS+9RLwze4e7frdJUi7Hf/deWa3jr72zV+9Tab0u6VtIXJL1x2F6k\nIXOtpDvU+xThU+r9m8scQZvD3R+X9PjTfzezxyQ9wYU/B/tdRSuu4a2/swUAoLZWf0AKAIBBQNgC\nAJCMsAUAIBlhCwBAMsIWAIBkWY/+NPYR5/X19UZqDg4OQsfb3Nws1kxOTobWCmpi2ENxv/f29kIL\nnT59+mp7adx9990Xqut0OpGyvux3kxYXF4s13W43tNbOzk6xJvJ+kmLn1MrKSlPDTPq65wsLC8Wa\n8fHx0Fqrq6tX2c2xDdQ5Pjc3V6yJnJeXLl0KHW92djZU16DQfnNnCwBAMsIWAIBkhC0AAMkIWwAA\nkhG2AAAkI2wBAEhG2AIAkIywBQAgWbXfZxt5iFmSzp07V6xZW1sr1kQerJZiAyuiAzIGSXSoRURk\nv6PHiwwGmJ6eDq01jJoaMhEdahERGaIhxQY/DKKtra1iTWS4TZPXgeienz17tljTr6EO0eEnkX2K\nrBXdo7GxsWJNcABOo7izBQA6z5WgAAAEAklEQVQgGWELAEAywhYAgGSELQAAyQhbAACSEbYAACQj\nbAEASEbYAgCQjLAFACBZtQlS+/v7ja21urparIlOOzk8PCzWRKcjRaZRDaPIRJjodKFR3iMptk+R\nCVrR40XeK1HDOkHq/PnzxZroxLmIyJ5funQptFaTfV2t6NSyyHs8MtEpeu5GzssmJ+pFcWcLAEAy\nwhYAgGSELQAAyQhbAACSEbYAACQjbAEASEbYAgCQjLAFACBZtaEWU1NTjdXt7u4Wa2ZmZkLHGxsb\nK9aM+lCLpaWlRmokaW1trVgzjMMTokNUIuduxNmzZxtZR5Lm5+dDdZFhG/20tbUVqosM1Il8b9Hj\nRd4LkfeBFBv+0C/R1z/yXojs5fLycuh4kde3xjWcO1sAAJIRtgAAJCNsAQBIRtgCAJCMsAUAIBlh\nCwBAMsIWAIBkhC0AAMnM3TPWTVm0H1ZWVvq9ljVwqMb2O/JweWTwR3Sow+bmZrHm4OAgtFZQX/Y7\n+v1H6iIP1ne73dDxIqJrBR/4b2K/pcCez83NhRaKDqNoysTERLEmOmQhqC/nePR9ubi4WKxp8vuP\nrBUdlNPkNZw7WwAAkhG2AAAkI2wBAEhG2AIAkIywBQAgGWELAEAywhYAgGSELQAAyQhbAACSDfwE\nqciUkvHx8aYON/ITpJoSnS4zPT1drIm+JsGpMK3c78g+Ruui06+C+jZBamdnJ7RQ5NxcXV0t1kQn\nUS0vLxdrmrzuqKXneFTktYtMrpPC09SYIAUAwCAgbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQt\nAADJCFsAAJKdqHXg6APoZ86cKdZcvny5WDM5ORk63t7eXrEmOkBgkES+L0nqdDrFmiaHHuzv7xdr\nor23VWS/d3d3Q2tFH+YfRk2+LyPXp+hQi+Cwldbq92CiyH43PEQkhDtbAACSEbYAACQjbAEASEbY\nAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJKZu2es29iikSkta2trjawjSVNTU8WabrcbWis4\nFcVCi/10xf2OTuyKTF+JTiuKGBsbK9ZEJ0gN0n43KTLVKzqBp8IEqSb2WxrAPY+KXi8aNFDn+Nzc\nXLEmMv0r+pocHh4WayI9SdKVK1eKNePj46H95s4WAIBkhC0AAMkIWwAAkhG2AAAkI2wBAEhG2AIA\nkIywBQAgGWELAECyrKEWAADgCHe2AAAkI2wBAEhG2AIAkIywBQAgGWELAEAywhYAgGSELQAAyQhb\nAACSEbYAACQjbAEASEbYAgCQjLAFACAZYQsAQDLCFgCAZIQtAADJCFsAAJIRtgAAJCNsAQBIRtgC\nAJCMsAUAIBlhCwBAMsIWAIBkhC0AAMn+HyWhHwS1TzOhAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1b99e944128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure( figsize=(8,8) )\n",
+    "for element_number, ( digit_data, digit_label ) in enumerate( list( zip( data.images, data.target ) )[ 1000:1025 ] ):\n",
+    "    plt.subplot(5, 5, element_number + 1 )\n",
+    "    plt.imshow( digit_data, cmap=plt.cm.gray_r )\n",
+    "    plt.axis('off')\n",
+    "    to_be_classified = np.array( digit_data ).reshape( ( 1, 8 * 8 ) )\n",
+    "    prediction_label = clf.predict( to_be_classified )\n",
+    "    plt.title( '%i' % prediction_label )"
    ]
   },
   {
